[project]
name = "fastapilearning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiomysql>=0.3.2",
    "bcrypt<4.0.0",
    "cryptography>=46.0.7",
    "fastapi>=0.135.3",
    "passlib[bcrypt]==1.7.4",
    "redis>=7.4.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvicorn[standard]>=0.44.0",
]
